Add docker support

--- a/.env.sample
+++ b/.env.sample
@@ -1,18 +1,4 @@
-#!/bin/bash
-
-# Guide:
-#
-# 1. Copy this file to .env
-#
-#    cp .env.sample .env
-#
-# 2. Fill the blanks
-
-export NODE_ENV=development
-export PORT=9000
-export ALLOW_HTTP=true
-
-# Warning: PDF rendering does not work in Chrome when it is in headed mode.
-export DEBUG_MODE=false
-
-echo "Environment variables set!"
+NODE_ENV=development
+PORT=9000
+ALLOW_HTTP=true
+DEBUG_MODE=false
